# herodot

./: Cargo.toml  Dockerfile  README.md  compose.yaml  openapi.yaml
database/initialization/: 01-schema.ddl.sql  02-test_data.dml.sql
src/: api.rs  api_key.rs  authentication.rs  error.rs  http_security_headers.rs  lib.rs  main.rs  reading.rs  record.rs  repository.rs  state.rs  status.rs  user.rs  user_api.rs
src/authentication/: api_key.rs  mod.rs  token.rs  user_api.rs  user_auth.rs
src/reading/: bme280.rs  ds18b20.rs  mod.rs
src/web/: mod.rs  record_display.rs  record_view.rs
templates/: api_key.html  api_keys.html  base.html  bme280.html  create-user.html  ds18b20.html  index.html  login.html  me.html  records.html  register.html
tests/JetBrains-HTTP/: http-client.env.json  webclient.http
