[package]
name = "herodot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
rerec = "0.0.1"
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
