[package]
name = "herodot"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["form"] }
rerec = "0.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.19.0", features = ["serde", "v4"] }
lazy_static = "1.5.0"
argon2 = "0.5.3"
